--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "npm-run-all --parallel watch:server start:web",
+    "start:local": "npm-run-all --parallel watch:server start:web",
     "start:web": "react-scripts start",
-    "start:server": "node server",
+    "start": "node server",
     "watch:server": "nodemon --watch server server",
+    "prebuild": "rm -rf server/app/build",
     "build": "react-scripts build",
+    "postbuild": "mv build server/app/build",
     "test": "react-scripts test --env=jsdom"
   },
   "eslintConfig": {
